--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <title>Fitness</title>
+  <title>ANDRES FERNANDEZ</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -21,7 +21,7 @@
 
 			<div class="logo">
 
-				<a href=""><img src="assets/img/logo.png" alt="Fitness"></a>
+				<a href=""> LOGO </a>
 
 			</div>
 
@@ -43,8 +43,9 @@
 
 		<div class="claim">
 
-			<p class="headline">Fitness In A Can<span>/</span></p>
-			<p class="kicker">Yes You Can<span>/</span></p>
+			<p class="headline">Andres Fernandez<span>/</span></p>
+			<p class="kicker"> Recuerda esto: tu cuerpo es tu esclavo. <span>/</span></p>
+			<p class="kicker"> Trabaja para ti, no tú para el. <span>/</span></p>
 
 		</div>
 
